--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -39,7 +39,7 @@ layout: default
         {% elsif page.venue and page.year and page.authors and page.track %}
           <p>{{ page.authors}}</p>
           <p>
-            Published in <i>{{ page.venue }}</i>, {{ page.year}}.
+            <i>{{ page.venue }}</i>, {{ page.year}}.
             {% if page.track == 'Full paper' %}
               <span class="long">{{page.track}}</span>
             {% elsif page.track == 'Short paper' %}
